--- a/styles/style.css
+++ b/styles/style.css
@@ -208,12 +208,12 @@ h2 {
   font-size: 14px;
 }
 /* line 160, style.scss */
-#user-box .display {
+#user-box .display-user {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 163, style.scss */
-#user-box .display .avatar {
+/* line 164, style.scss */
+#user-box .display-user .avatar a {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   -o-border-radius: 5px;
@@ -233,23 +233,33 @@ h2 {
   text-indent: -10000px;
 }
 /* line 40, style.scss */
-#user-box .display .avatar.anivia {
+#user-box .display-user .avatar a.anivia {
   background-image: url("../images/anivia.jpg");
 }
 /* line 41, style.scss */
-#user-box .display .avatar.ashe, #user-box .display .avatar.default {
+#user-box .display-user .avatar a.ashe, #user-box .display-user .avatar a.default {
   background-image: url("../images/ashe.jpg");
 }
 /* line 42, style.scss */
-#user-box .display .avatar.twistedfate {
+#user-box .display-user .avatar a.twistedfate {
   background-image: url("../images/twistedfate.jpg");
 }
-/* line 177, style.scss */
-#user-box .display .username {
+/* line 179, style.scss */
+#user-box .display-user .username {
   float: left;
+  margin: 5px 0 0 5px;
 }
-/* line 182, style.scss */
-#user-box .edit {
+/* line 184, style.scss */
+#user-box .display-user .open-edit {
+  display: none;
+  margin: 5px 0 0 3px;
+}
+/* line 190, style.scss */
+#user-box .display-user:hover .open-edit {
+  display: inline-block;
+}
+/* line 196, style.scss */
+#user-box .edit-user {
   overflow: hidden;
   *zoom: 1;
   -moz-box-shadow: #d1d1d1 1px 1px 1px;
@@ -260,38 +270,38 @@ h2 {
   padding: 10px;
   margin: 5px 0 0;
 }
-/* line 190, style.scss */
-#user-box .edit fieldset {
+/* line 204, style.scss */
+#user-box .edit-user fieldset {
   overflow: hidden;
   *zoom: 1;
   margin-bottom: 10px;
 }
-/* line 194, style.scss */
-#user-box .edit fieldset label {
+/* line 208, style.scss */
+#user-box .edit-user fieldset label {
   float: left;
   width: 100px;
   text-align: right;
 }
-/* line 200, style.scss */
-#user-box .edit fieldset .values {
+/* line 214, style.scss */
+#user-box .edit-user fieldset .values {
   float: left;
   margin-left: 10px;
 }
-/* line 204, style.scss */
-#user-box .edit fieldset .values .username {
+/* line 218, style.scss */
+#user-box .edit-user fieldset .values .username {
   height: 20px;
 }
-/* line 208, style.scss */
-#user-box .edit fieldset .values .avatars {
+/* line 222, style.scss */
+#user-box .edit-user fieldset .values .avatars {
   list-style-type: none;
 }
-/* line 212, style.scss */
-#user-box .edit fieldset .values .avatars li {
+/* line 226, style.scss */
+#user-box .edit-user fieldset .values .avatars li {
   float: left;
   margin-right: 2px;
 }
-/* line 216, style.scss */
-#user-box .edit fieldset .values .avatars li a {
+/* line 230, style.scss */
+#user-box .edit-user fieldset .values .avatars li a {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   -o-border-radius: 5px;
@@ -311,31 +321,31 @@ h2 {
   text-indent: -10000px;
 }
 /* line 40, style.scss */
-#user-box .edit fieldset .values .avatars li a.anivia {
+#user-box .edit-user fieldset .values .avatars li a.anivia {
   background-image: url("../images/anivia.jpg");
 }
 /* line 41, style.scss */
-#user-box .edit fieldset .values .avatars li a.ashe, #user-box .edit fieldset .values .avatars li a.default {
+#user-box .edit-user fieldset .values .avatars li a.ashe, #user-box .edit-user fieldset .values .avatars li a.default {
   background-image: url("../images/ashe.jpg");
 }
 /* line 42, style.scss */
-#user-box .edit fieldset .values .avatars li a.twistedfate {
+#user-box .edit-user fieldset .values .avatars li a.twistedfate {
   background-image: url("../images/twistedfate.jpg");
 }
-/* line 229, style.scss */
-#user-box .edit fieldset .values .avatars li a.selected {
+/* line 243, style.scss */
+#user-box .edit-user fieldset .values .avatars li a.selected {
   border: 3px solid #ffdb4c;
 }
-/* line 238, style.scss */
-#user-box .edit .actions {
+/* line 252, style.scss */
+#user-box .edit-user .actions {
   text-align: right;
 }
 
-/* line 244, style.scss */
+/* line 258, style.scss */
 #tweet-box {
   padding: 10px;
 }
-/* line 247, style.scss */
+/* line 261, style.scss */
 #tweet-box #tweet-message {
   width: 373px;
   height: 50px;
@@ -343,17 +353,17 @@ h2 {
   max-width: 373px;
   max-height: 100px;
 }
-/* line 255, style.scss */
+/* line 269, style.scss */
 #tweet-box footer {
   margin: 10px 0 0;
   text-align: right;
 }
-/* line 259, style.scss */
+/* line 273, style.scss */
 #tweet-box footer #tweet-count {
   font-size: 14px;
   margin: 0 5px 0;
 }
-/* line 264, style.scss */
+/* line 278, style.scss */
 #tweet-box footer .submit {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -369,15 +379,15 @@ h2 {
   font-weight: bold;
   cursor: pointer;
 }
-/* line 275, style.scss */
+/* line 289, style.scss */
 #tweet-box footer .submit:hover {
   background-color: #e6efc2;
 }
-/* line 279, style.scss */
+/* line 293, style.scss */
 #tweet-box footer .submit:disabled {
   color: #d1d1d1;
 }
-/* line 282, style.scss */
+/* line 296, style.scss */
 #tweet-box footer .submit:disabled:hover {
   background: #f5f5f5;
 }
