--- a/styles/style.scss
+++ b/styles/style.scss
@@ -78,15 +78,16 @@ h2 {
 	li.tweet {
 		@include clearfix;
 		position: relative;
-		padding: 10px 10px 10px 70px;
+		padding: 10px 10px 10px 80px;
 		border-bottom: 1px solid $tweet-bottom-border;
 	
 		.avatar {
 			position: absolute;
-			left: 10px;
+			left: 20px;
 			top: 10px;
 			
 			a {
+				@include avatars;
 				@include border-radius(5px);
 				@include background-size(contain);
 				border: 1px solid #000;
@@ -94,10 +95,6 @@ h2 {
 				height: 48px;
 				background-position: 50% 50%;
 				display: block;
-			
-				&.anivia {background-image: url('../images/anivia.jpg');}
-				&.ashe, &.default {background-image: url('../images/ashe.jpg');}
-				&.twistedfate {background-image: url('../images/twistedfate.jpg');}
 			}
 		}
 		
