updated link styles tweet actions

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* line 66, style.scss */
+/* line 68, style.scss */
 body {
   font-family: Helvetica, Arial, san-serif;
   color: rgba(0, 0, 0, 0.5);
@@ -72,20 +72,20 @@ body {
   background-color: #d1d1d1;
 }
 
-/* line 74, style.scss */
+/* line 76, style.scss */
 h1 {
   font-size: 1.8em;
   line-height: 2.0em;
   text-shadow: 0px 1px 1px #cccccc;
 }
 
-/* line 80, style.scss */
+/* line 82, style.scss */
 h2 {
   font-size: 1.6em;
   line-height: 1.8em;
 }
 
-/* line 85, style.scss */
+/* line 87, style.scss */
 #app {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -104,11 +104,11 @@ h2 {
   width: 400px;
 }
 
-/* line 96, style.scss */
+/* line 98, style.scss */
 #tweets-container {
   margin: 0 -10px;
 }
-/* line 99, style.scss */
+/* line 101, style.scss */
 #tweets-container li.tweet {
   overflow: hidden;
   *zoom: 1;
@@ -116,13 +116,13 @@ h2 {
   padding: 10px 10px 10px 80px;
   border-bottom: 1px solid #333333;
 }
-/* line 105, style.scss */
+/* line 107, style.scss */
 #tweets-container li.tweet .avatar {
   position: absolute;
   left: 20px;
   top: 10px;
 }
-/* line 110, style.scss */
+/* line 112, style.scss */
 #tweets-container li.tweet .avatar a {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -140,46 +140,56 @@ h2 {
   background-position: 50% 50%;
   display: block;
 }
-/* line 45, style.scss */
+/* line 47, style.scss */
 #tweets-container li.tweet .avatar a.anivia {
   background-image: url("../images/anivia.jpg");
 }
-/* line 46, style.scss */
+/* line 48, style.scss */
 #tweets-container li.tweet .avatar a.ashe, #tweets-container li.tweet .avatar a.default {
   background-image: url("../images/ashe.jpg");
 }
-/* line 47, style.scss */
+/* line 49, style.scss */
 #tweets-container li.tweet .avatar a.twistedfate {
   background-image: url("../images/twistedfate.jpg");
 }
-/* line 123, style.scss */
+/* line 125, style.scss */
 #tweets-container li.tweet .content .name {
   font-weight: bold;
 }
-/* line 127, style.scss */
+/* line 129, style.scss */
 #tweets-container li.tweet .content .message {
   font-size: 0.9em;
   word-wrap: break-word;
 }
-/* line 133, style.scss */
+/* line 135, style.scss */
 #tweets-container li.tweet .date {
   position: absolute;
   top: 10px;
   right: 30px;
   font-size: 12px;
 }
-/* line 140, style.scss */
+/* line 142, style.scss */
 #tweets-container li.tweet .actions {
   margin: 10px 0 0;
 }
-/* line 143, style.scss */
+/* line 145, style.scss */
 #tweets-container li.tweet .actions li {
   list-style-type: none;
   float: left;
-  padding: 0 5px 5px 0;
+  padding: 0 10px 5px 0;
   font-size: 14px;
 }
 /* line 151, style.scss */
+#tweets-container li.tweet .actions li a {
+  font-size: 0.9em;
+  color: #1155cc;
+  text-decoration: none;
+}
+/* line 156, style.scss */
+#tweets-container li.tweet .actions li a:hover {
+  text-decoration: underline;
+}
+/* line 163, style.scss */
 #tweets-container li.tweet a.favorite {
   position: absolute;
   top: 10px;
@@ -190,16 +200,16 @@ h2 {
   display: block;
   text-indent: -10000px;
 }
-/* line 161, style.scss */
+/* line 173, style.scss */
 #tweets-container li.tweet a.favorite.on {
   background-image: url("../images/star-lit4.png");
 }
-/* line 167, style.scss */
+/* line 179, style.scss */
 #tweets-container .tweet:last-child {
   border: none;
 }
 
-/* line 172, style.scss */
+/* line 184, style.scss */
 #user-box {
   overflow: hidden;
   *zoom: 1;
@@ -207,12 +217,12 @@ h2 {
   padding: 5px 10px;
   font-size: 14px;
 }
-/* line 178, style.scss */
+/* line 190, style.scss */
 #user-box .display-user {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 182, style.scss */
+/* line 194, style.scss */
 #user-box .display-user .avatar a {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -232,33 +242,33 @@ h2 {
   cursor: pointer;
   text-indent: -10000px;
 }
-/* line 45, style.scss */
+/* line 47, style.scss */
 #user-box .display-user .avatar a.anivia {
   background-image: url("../images/anivia.jpg");
 }
-/* line 46, style.scss */
+/* line 48, style.scss */
 #user-box .display-user .avatar a.ashe, #user-box .display-user .avatar a.default {
   background-image: url("../images/ashe.jpg");
 }
-/* line 47, style.scss */
+/* line 49, style.scss */
 #user-box .display-user .avatar a.twistedfate {
   background-image: url("../images/twistedfate.jpg");
 }
-/* line 197, style.scss */
+/* line 209, style.scss */
 #user-box .display-user .username {
   float: left;
   margin: 5px 0 0 5px;
 }
-/* line 202, style.scss */
+/* line 214, style.scss */
 #user-box .display-user .open-edit {
   display: none;
   margin: 5px 0 0 3px;
 }
-/* line 208, style.scss */
+/* line 220, style.scss */
 #user-box .display-user:hover .open-edit {
   display: inline-block;
 }
-/* line 214, style.scss */
+/* line 226, style.scss */
 #user-box .edit-user {
   overflow: hidden;
   *zoom: 1;
@@ -270,37 +280,37 @@ h2 {
   padding: 10px;
   margin: 5px 0 0;
 }
-/* line 222, style.scss */
+/* line 234, style.scss */
 #user-box .edit-user fieldset {
   overflow: hidden;
   *zoom: 1;
   margin-bottom: 10px;
 }
-/* line 226, style.scss */
+/* line 238, style.scss */
 #user-box .edit-user fieldset label {
   float: left;
   width: 100px;
   text-align: right;
 }
-/* line 232, style.scss */
+/* line 244, style.scss */
 #user-box .edit-user fieldset .values {
   float: left;
   margin-left: 10px;
 }
-/* line 236, style.scss */
+/* line 248, style.scss */
 #user-box .edit-user fieldset .values .username {
   height: 20px;
 }
-/* line 240, style.scss */
+/* line 252, style.scss */
 #user-box .edit-user fieldset .values .avatars {
   list-style-type: none;
 }
-/* line 244, style.scss */
+/* line 256, style.scss */
 #user-box .edit-user fieldset .values .avatars li {
   float: left;
   margin-right: 2px;
 }
-/* line 248, style.scss */
+/* line 260, style.scss */
 #user-box .edit-user fieldset .values .avatars li a {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -320,27 +330,27 @@ h2 {
   cursor: pointer;
   text-indent: -10000px;
 }
-/* line 45, style.scss */
+/* line 47, style.scss */
 #user-box .edit-user fieldset .values .avatars li a.anivia {
   background-image: url("../images/anivia.jpg");
 }
-/* line 46, style.scss */
+/* line 48, style.scss */
 #user-box .edit-user fieldset .values .avatars li a.ashe, #user-box .edit-user fieldset .values .avatars li a.default {
   background-image: url("../images/ashe.jpg");
 }
-/* line 47, style.scss */
+/* line 49, style.scss */
 #user-box .edit-user fieldset .values .avatars li a.twistedfate {
   background-image: url("../images/twistedfate.jpg");
 }
-/* line 261, style.scss */
+/* line 273, style.scss */
 #user-box .edit-user fieldset .values .avatars li a.selected {
   border: 3px solid #ffdb4c;
 }
-/* line 270, style.scss */
+/* line 282, style.scss */
 #user-box .edit-user .actions {
   text-align: right;
 }
-/* line 273, style.scss */
+/* line 285, style.scss */
 #user-box .edit-user .actions .save {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -356,16 +366,16 @@ h2 {
   font-weight: bold;
   cursor: pointer;
 }
-/* line 61, style.scss */
+/* line 63, style.scss */
 #user-box .edit-user .actions .save:hover {
   background-color: #e6efc2;
 }
 
-/* line 280, style.scss */
+/* line 292, style.scss */
 #tweet-box {
   padding: 10px;
 }
-/* line 283, style.scss */
+/* line 295, style.scss */
 #tweet-box #tweet-message {
   width: 373px;
   height: 50px;
@@ -373,17 +383,17 @@ h2 {
   max-width: 373px;
   max-height: 100px;
 }
-/* line 291, style.scss */
+/* line 303, style.scss */
 #tweet-box footer {
   margin: 10px 0 0;
   text-align: right;
 }
-/* line 295, style.scss */
+/* line 307, style.scss */
 #tweet-box footer #tweet-count {
   font-size: 14px;
   margin: 0 5px 0;
 }
-/* line 300, style.scss */
+/* line 312, style.scss */
 #tweet-box footer .submit {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -399,15 +409,15 @@ h2 {
   font-weight: bold;
   cursor: pointer;
 }
-/* line 61, style.scss */
+/* line 63, style.scss */
 #tweet-box footer .submit:hover {
   background-color: #e6efc2;
 }
-/* line 303, style.scss */
+/* line 315, style.scss */
 #tweet-box footer .submit:disabled {
   color: #d1d1d1;
 }
-/* line 306, style.scss */
+/* line 318, style.scss */
 #tweet-box footer .submit:disabled:hover {
   background: #f5f5f5;
 }
