--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* line 68, style.scss */
+/* line 73, style.scss */
 body {
   font-family: Helvetica, Arial, san-serif;
   color: rgba(0, 0, 0, 0.5);
@@ -72,20 +72,33 @@ body {
   background-color: #d1d1d1;
 }
 
-/* line 76, style.scss */
+/* line 81, style.scss */
 h1 {
   font-size: 1.8em;
   line-height: 2.0em;
-  text-shadow: 0px 1px 1px #cccccc;
 }
 
-/* line 82, style.scss */
+/* line 86, style.scss */
 h2 {
   font-size: 1.6em;
   line-height: 1.8em;
 }
 
-/* line 87, style.scss */
+/* line 91, style.scss */
+#wrap {
+  margin: 0 auto;
+  width: 420px;
+}
+
+/* line 97, style.scss */
+header h1 {
+  text-shadow: 0px 1px 1px #f5f5f5;
+  font-family: Arial, san-serif;
+  font-weight: bold;
+  color: #333333;
+}
+
+/* line 105, style.scss */
 #app {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -98,31 +111,34 @@ h2 {
   -o-box-shadow: #333333 1px 1px 1px;
   box-shadow: #333333 1px 1px 1px;
   background-color: white;
-  border: 1px solid #d1d1d1;
-  margin: 0 auto;
   padding: 10px;
-  width: 400px;
 }
 
-/* line 98, style.scss */
+/* line 113, style.scss */
+footer {
+  margin: 10px 0 0;
+  font-size: 0.8em;
+}
+
+/* line 118, style.scss */
 #tweets-container {
   margin: 0 -10px;
 }
-/* line 101, style.scss */
+/* line 121, style.scss */
 #tweets-container li.tweet {
   overflow: hidden;
   *zoom: 1;
   position: relative;
   padding: 10px 10px 10px 80px;
-  border-bottom: 1px solid #333333;
+  border-top: 1px solid #d1d1d1;
 }
-/* line 107, style.scss */
+/* line 127, style.scss */
 #tweets-container li.tweet .avatar {
   position: absolute;
   left: 20px;
   top: 10px;
 }
-/* line 112, style.scss */
+/* line 132, style.scss */
 #tweets-container li.tweet .avatar a {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -140,56 +156,56 @@ h2 {
   background-position: 50% 50%;
   display: block;
 }
-/* line 47, style.scss */
+/* line 52, style.scss */
 #tweets-container li.tweet .avatar a.anivia {
   background-image: url("../images/anivia.jpg");
 }
-/* line 48, style.scss */
+/* line 53, style.scss */
 #tweets-container li.tweet .avatar a.ashe, #tweets-container li.tweet .avatar a.default {
   background-image: url("../images/ashe.jpg");
 }
-/* line 49, style.scss */
+/* line 54, style.scss */
 #tweets-container li.tweet .avatar a.twistedfate {
   background-image: url("../images/twistedfate.jpg");
 }
-/* line 125, style.scss */
+/* line 145, style.scss */
 #tweets-container li.tweet .content .name {
   font-weight: bold;
 }
-/* line 129, style.scss */
+/* line 149, style.scss */
 #tweets-container li.tweet .content .message {
   font-size: 0.9em;
   word-wrap: break-word;
 }
-/* line 135, style.scss */
+/* line 155, style.scss */
 #tweets-container li.tweet .date {
   position: absolute;
   top: 10px;
   right: 30px;
   font-size: 12px;
 }
-/* line 142, style.scss */
+/* line 162, style.scss */
 #tweets-container li.tweet .actions {
   margin: 10px 0 0;
 }
-/* line 145, style.scss */
+/* line 165, style.scss */
 #tweets-container li.tweet .actions li {
   list-style-type: none;
   float: left;
   padding: 0 10px 5px 0;
   font-size: 14px;
 }
-/* line 151, style.scss */
+/* line 171, style.scss */
 #tweets-container li.tweet .actions li a {
   font-size: 0.9em;
   color: #1155cc;
   text-decoration: none;
 }
-/* line 156, style.scss */
+/* line 176, style.scss */
 #tweets-container li.tweet .actions li a:hover {
   text-decoration: underline;
 }
-/* line 163, style.scss */
+/* line 183, style.scss */
 #tweets-container li.tweet a.favorite {
   position: absolute;
   top: 10px;
@@ -200,16 +216,12 @@ h2 {
   display: block;
   text-indent: -10000px;
 }
-/* line 173, style.scss */
+/* line 193, style.scss */
 #tweets-container li.tweet a.favorite.on {
   background-image: url("../images/star-lit4.png");
 }
-/* line 179, style.scss */
-#tweets-container .tweet:last-child {
-  border: none;
-}
 
-/* line 184, style.scss */
+/* line 204, style.scss */
 #user-box {
   overflow: hidden;
   *zoom: 1;
@@ -217,12 +229,12 @@ h2 {
   padding: 5px 10px;
   font-size: 14px;
 }
-/* line 190, style.scss */
+/* line 210, style.scss */
 #user-box .display-user {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 194, style.scss */
+/* line 214, style.scss */
 #user-box .display-user .avatar a {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -242,75 +254,87 @@ h2 {
   cursor: pointer;
   text-indent: -10000px;
 }
-/* line 47, style.scss */
+/* line 52, style.scss */
 #user-box .display-user .avatar a.anivia {
   background-image: url("../images/anivia.jpg");
 }
-/* line 48, style.scss */
+/* line 53, style.scss */
 #user-box .display-user .avatar a.ashe, #user-box .display-user .avatar a.default {
   background-image: url("../images/ashe.jpg");
 }
-/* line 49, style.scss */
+/* line 54, style.scss */
 #user-box .display-user .avatar a.twistedfate {
   background-image: url("../images/twistedfate.jpg");
 }
-/* line 209, style.scss */
+/* line 229, style.scss */
 #user-box .display-user .username {
   float: left;
   margin: 5px 0 0 5px;
 }
-/* line 214, style.scss */
+/* line 234, style.scss */
 #user-box .display-user .open-edit {
   display: none;
   margin: 5px 0 0 3px;
 }
-/* line 220, style.scss */
+/* line 240, style.scss */
 #user-box .display-user:hover .open-edit {
   display: inline-block;
 }
-/* line 226, style.scss */
+/* line 246, style.scss */
 #user-box .edit-user {
   overflow: hidden;
   *zoom: 1;
-  -moz-box-shadow: #d1d1d1 1px 1px 1px;
-  -webkit-box-shadow: #d1d1d1 1px 1px 1px;
-  -o-box-shadow: #d1d1d1 1px 1px 1px;
-  box-shadow: #d1d1d1 1px 1px 1px;
-  border: 1px solid #000;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
   padding: 10px;
   margin: 5px 0 0;
 }
-/* line 234, style.scss */
+/* line 254, style.scss */
 #user-box .edit-user fieldset {
   overflow: hidden;
   *zoom: 1;
   margin-bottom: 10px;
 }
-/* line 238, style.scss */
+/* line 258, style.scss */
 #user-box .edit-user fieldset label {
   float: left;
   width: 100px;
   text-align: right;
+  font-weight: bold;
 }
-/* line 244, style.scss */
+/* line 265, style.scss */
 #user-box .edit-user fieldset .values {
   float: left;
   margin-left: 10px;
 }
-/* line 248, style.scss */
+/* line 269, style.scss */
 #user-box .edit-user fieldset .values .username {
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -o-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -khtml-border-radius: 2px;
+  border-radius: 2px;
+  border: 1px solid #d1d1d1;
+  -webkit-appearance: textfield;
+  padding: 0 5px;
   height: 20px;
 }
-/* line 252, style.scss */
+/* line 277, style.scss */
 #user-box .edit-user fieldset .values .avatars {
   list-style-type: none;
 }
-/* line 256, style.scss */
+/* line 281, style.scss */
 #user-box .edit-user fieldset .values .avatars li {
   float: left;
   margin-right: 2px;
 }
-/* line 260, style.scss */
+/* line 285, style.scss */
 #user-box .edit-user fieldset .values .avatars li a {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -330,27 +354,27 @@ h2 {
   cursor: pointer;
   text-indent: -10000px;
 }
-/* line 47, style.scss */
+/* line 52, style.scss */
 #user-box .edit-user fieldset .values .avatars li a.anivia {
   background-image: url("../images/anivia.jpg");
 }
-/* line 48, style.scss */
+/* line 53, style.scss */
 #user-box .edit-user fieldset .values .avatars li a.ashe, #user-box .edit-user fieldset .values .avatars li a.default {
   background-image: url("../images/ashe.jpg");
 }
-/* line 49, style.scss */
+/* line 54, style.scss */
 #user-box .edit-user fieldset .values .avatars li a.twistedfate {
   background-image: url("../images/twistedfate.jpg");
 }
-/* line 273, style.scss */
+/* line 298, style.scss */
 #user-box .edit-user fieldset .values .avatars li a.selected {
   border: 3px solid #ffdb4c;
 }
-/* line 282, style.scss */
+/* line 307, style.scss */
 #user-box .edit-user .actions {
   text-align: right;
 }
-/* line 285, style.scss */
+/* line 310, style.scss */
 #user-box .edit-user .actions .save {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -366,16 +390,16 @@ h2 {
   font-weight: bold;
   cursor: pointer;
 }
-/* line 63, style.scss */
+/* line 68, style.scss */
 #user-box .edit-user .actions .save:hover {
   background-color: #e6efc2;
 }
 
-/* line 292, style.scss */
+/* line 317, style.scss */
 #tweet-box {
   padding: 10px;
 }
-/* line 295, style.scss */
+/* line 320, style.scss */
 #tweet-box #tweet-message {
   width: 373px;
   height: 50px;
@@ -383,17 +407,17 @@ h2 {
   max-width: 373px;
   max-height: 100px;
 }
-/* line 303, style.scss */
+/* line 328, style.scss */
 #tweet-box footer {
   margin: 10px 0 0;
   text-align: right;
 }
-/* line 307, style.scss */
+/* line 332, style.scss */
 #tweet-box footer #tweet-count {
   font-size: 14px;
   margin: 0 5px 0;
 }
-/* line 312, style.scss */
+/* line 337, style.scss */
 #tweet-box footer .submit {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -409,15 +433,15 @@ h2 {
   font-weight: bold;
   cursor: pointer;
 }
-/* line 63, style.scss */
+/* line 68, style.scss */
 #tweet-box footer .submit:hover {
   background-color: #e6efc2;
 }
-/* line 315, style.scss */
+/* line 340, style.scss */
 #tweet-box footer .submit:disabled {
   color: #d1d1d1;
 }
-/* line 318, style.scss */
+/* line 343, style.scss */
 #tweet-box footer .submit:disabled:hover {
   background: #f5f5f5;
 }
